<resources>
    <string name="app_name">Whats Happening</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Whats Happening</string>
    <string name="nav_header_subtitle">see whats happening outside</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_account">My Account</string>
    <string name="menu_saved">Saved Item</string>
    <string name="menu_country">My Country</string>
    <string name="about">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="category">categories</string>
    <string name="menu_cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="business1">Business</string>
    <string name="toi"> Sorry.. Times of India has Restricted this Content  We Are Really Sorry</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business2">TOP Business News India</string>
    <string name="entertainment">Entertainment News India</string>
    <string name="business">Top Business News India</string>
    <string name="science">Top Science News India</string>
    <string name="technology">Top Tech News India</string>
    <string name="sports">Top Sports News India</string>
    <string name="test">He made his ODI debut in December 2004 against Bangladesh, and played his first Test a year later against Sri Lanka. Dhoni has been the recipient of many awards, including the ICC ODI Player of the Year award in 2008 and 2009 (the first player to win the award twice), the Rajiv Gandhi Khel Ratna award in 2007, the Padma Shri, India\'s fourth highest civilian honour, in 2009 and the Padma Bhushan, Indias third highest civilian honour, in 2018.[7] He was named as the captain of the ICC World Test XI in 2009, 2010 and 2013. He has also been selected a record 8 times in ICC World ODI XI teams, 5 times as captain. The Indian Territorial Army conferred the honorary rank of Lieutenant Colonel[8] to Dhoni on 1 November 2011. He is the second Indian cricketer after Kapil Dev to receive this honour.</string>
    <string name="top_news">Top Breaking News India</string>
    <string name="businessNews">Business</string>
    <string name="health">Top Health News India</string>
    <string name="mobile">Mobile</string>
    <string name="gadget">Gadget</string>
    <string name="covid19">Covid19</string>
    <string name="LifeStyle">Lifestyle</string>
    <string name="others">other</string>
    <string name="Business">businesss</string>
    <string name="hot_news">Hot News</string>
    <string name="fact">fact</string>
    <string name="top_business_news_around_the_world">Top Business News</string>
    <string name="economy">Economy</string>
    <string name="share_market">Share Market</string>
    <string name="fact_check">Fact Check</string>
    <string name="topSports_news_around_the_world">Top Sports News</string>
    <string name="sportsNews">Top Sports News</string>
    <string name="techWorld">Top Tech News Around The World</string>
    <string name="topSport">Top Sports News</string>
    <string name="Health">Health</string>
    <string name="all_sports_news">All</string>
    <string name="Golf">Golf</string>
    <string name="tennis">Tennis</string>
    <string name="badminton">Badminton</string>
    <string name="entertainment1">Entrainment</string>
    <string name="whats">Whats</string>
    <string name="happening">Happening</string>
    <string name="todo">TODO</string>
    <string name="loading">Loading…</string>
    <string name="city">city</string>
    <string name="complete_action_using">Complete Action Using</string>
    <string name="finance">Finance</string>
    <string name="basketball">BasketBall</string>
    <string name="fashion">fashion</string>
    <string name="techNews">TechNews</string>
    <string name="home">Home</string>
    <string name="my_city">My City</string>
    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="mic">Mic</string>
</resources>
