<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".front_screen_fragment.Conatinerfragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font7"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/top_news"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold|italic"
                tools:ignore="RtlSymmetry" />

            <FrameLayout
                android:id="@+id/ctopnews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font7"
                android:paddingStart="@dimen/activity_vertical_margin"

                android:text="@string/business2"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold|italic"
                tools:ignore="RtlSymmetry" />

            <FrameLayout
                android:id="@+id/cbusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font7"
                android:paddingStart="@dimen/activity_vertical_margin"

                android:text="@string/sports"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold|italic"
                tools:ignore="RtlSymmetry" />

            <FrameLayout
                android:id="@+id/csports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font7"

                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/entertainment"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold|italic"
                tools:ignore="RtlSymmetry" />

            <FrameLayout
                android:id="@+id/centartainment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font7"

                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/technology"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold|italic"
                tools:ignore="RtlSymmetry" />

            <FrameLayout
                android:id="@+id/ctech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:fontFamily="@font/font7"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/science"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold|italic"
                tools:ignore="RtlSymmetry" />

            <FrameLayout
                android:id="@+id/cscience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font7"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/health"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold|italic"
                tools:ignore="RtlSymmetry" />

            <FrameLayout
                android:id="@+id/cHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>